--- a/InstantGrinder/InstantGrinder.csproj
+++ b/InstantGrinder/InstantGrinder.csproj
@@ -31,9 +31,14 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="TorchInfluxDb">
-            <HintPath>$(SolutionDir)\..\TorchInfluxDb\TorchInfluxDb\bin\Release\TorchInfluxDb.dll</HintPath>
+        <Reference Include="InfluxDb.Torch">
+            <HintPath>$(SolutionDir)\extern\InfluxDb.Torch.dll</HintPath>
         </Reference>
+        <Reference Include="InfluxDb.Client">
+            <HintPath>$(SolutionDir)\extern\InfluxDb.Client.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+    <ItemGroup>
         <Reference Include="NLog">
             <HintPath>$(SolutionDir)\TorchBinaries\NLog.dll</HintPath>
         </Reference>
@@ -136,6 +141,8 @@
         <Reference Include="SpaceEngineers.ObjectBuilders.XmlSerializers">
             <HintPath>$(SolutionDir)\GameBinaries\SpaceEngineers.ObjectBuilders.XmlSerializers.dll</HintPath>
         </Reference>
+    </ItemGroup>
+    <ItemGroup>
         <Reference Include="WindowsBase" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
