--- a/InstantGrinder/InstantGrinder.csproj
+++ b/InstantGrinder/InstantGrinder.csproj
@@ -17,7 +17,7 @@
         <DebugType>full</DebugType>
         <Optimize>false</Optimize>
         <OutputPath>bin\Debug\</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
+        <DefineConstants>DEBUG;TRACE;TORCH</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
@@ -26,11 +26,14 @@
         <DebugType>pdbonly</DebugType>
         <Optimize>true</Optimize>
         <OutputPath>bin\Release\</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
+        <DefineConstants>TRACE;TORCH</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="HavokWrapper, Version=0.1.1.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\GameBinaries\HavokWrapper.dll</HintPath>
+        </Reference>
         <Reference Include="NLog">
             <HintPath>$(SolutionDir)\TorchBinaries\NLog.dll</HintPath>
         </Reference>
@@ -159,32 +162,6 @@
         <Compile Include="InstantGrinder\Reflections\MyInventory_TransferItemInternal.cs" />
         <Compile Include="InstantGrinder\Reflections\MySlimBlock_DeconstructStockpile.cs" />
         <Compile Include="InstantGrinder\Reflections\MySlimBlock_Stockpile.cs" />
-        <Compile Include="Utils.General\AbsJsonConverter.cs" />
-        <Compile Include="Utils.General\ActionDisposable.cs" />
-        <Compile Include="Utils.General\ActionQueue.cs" />
-        <Compile Include="Utils.General\CollectionUtils.cs" />
-        <Compile Include="Utils.General\DebugUtils.cs" />
-        <Compile Include="Utils.General\DeprecationObserver.cs" />
-        <Compile Include="Utils.General\DisposableCollection.cs" />
-        <Compile Include="Utils.General\DisposableUtils.cs" />
-        <Compile Include="Utils.General\LangUtils.cs" />
-        <Compile Include="Utils.General\MathUtils.cs" />
-        <Compile Include="Utils.General\ObjectPool.cs" />
-        <Compile Include="Utils.General\PersistencyObserver.cs" />
-        <Compile Include="Utils.General\ReflectionUtils.cs" />
-        <Compile Include="Utils.General\StringFloatConverter.cs" />
-        <Compile Include="Utils.General\StupidDb.cs" />
-        <Compile Include="Utils.General\TaskUtils.cs" />
-        <Compile Include="Utils.General\ThreadSafeThrottle.cs" />
-        <Compile Include="Utils.Torch\CommandErrorResponseGenerator.cs" />
-        <Compile Include="Utils.Torch\CommandOption.cs" />
-        <Compile Include="Utils.Torch\GameLoopObserver.cs" />
-        <Compile Include="Utils.Torch\GameLoopObserverManager.cs" />
-        <Compile Include="Utils.Torch\TorchPluginUtils.cs" />
-        <Compile Include="Utils.Torch\TorchUtils.cs" />
-        <Compile Include="Utils.Torch\ViewUtils.cs" />
-        <Compile Include="Utils.Torch\VRageUtils.cs" />
-        <Compile Include="Utils.Torch\XmlUtils.cs" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="manifest.xml" />
@@ -203,5 +180,7 @@
             [ -z "$NoDeploy" ] || $(ProjectDir)postbuild.bat $(ProjectName) $(SolutionDir)
         </PostBuildEvent>
     </PropertyGroup>
+    <Import Project="..\TorchUtils\Utils.General\Utils.General.projitems" Label="Shared" />
+    <Import Project="..\TorchUtils\Utils.Torch\Utils.Torch.projitems" Label="Shared" />
 
 </Project>
