--- a/InstantGrinder/InstantGrinder.csproj
+++ b/InstantGrinder/InstantGrinder.csproj
@@ -151,6 +151,8 @@
         <Reference Include="PresentationFramework" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="InstantGrinder.Core\InstantGrinder.cs" />
+        <Compile Include="InstantGrinder.Core\Utils.cs" />
         <Compile Include="InstantGrinder.Patches\MyInventory_AddItemsInternal.cs" />
         <Compile Include="InstantGrinder.Patches\MyInventory_TransferItemInternal.cs" />
         <Compile Include="InstantGrinder.Patches\MySafeZone_IsOutside.cs" />
@@ -161,7 +163,6 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="InstantGrinder\InstantGrinderCommandModule.cs" />
         <Compile Include="InstantGrinder\InstantGrinderPlugin.cs" />
-        <Compile Include="InstantGrinder\GrindByNameCommandOption.cs" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="manifest.xml" />
