--- a/InstantGrinder/InstantGrinder.csproj
+++ b/InstantGrinder/InstantGrinder.csproj
@@ -154,6 +154,7 @@
     <ItemGroup>
         <Compile Include="InstantGrinder.Core\InstantGrinder.cs" />
         <Compile Include="InstantGrinder.Core\InstantGrinderException.cs" />
+        <Compile Include="InstantGrinder.Core\GrindObjection.cs" />
         <Compile Include="InstantGrinder.Core\Utils.cs" />
         <Compile Include="InstantGrinder.Patches\MyInventory_AddItemsInternal.cs" />
         <Compile Include="InstantGrinder.Patches\MyInventory_TransferItemInternal.cs" />
