--- a/InstantGrinder/InstantGrinder.csproj
+++ b/InstantGrinder/InstantGrinder.csproj
@@ -37,147 +37,147 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="NLog">
-            <HintPath>$(SolutionDir)\TorchBinaries\NLog.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\TorchBinaries\NLog.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Newtonsoft.Json">
-            <HintPath>$(SolutionDir)\TorchBinaries\Newtonsoft.Json.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\TorchBinaries\Newtonsoft.Json.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="System.Net.Http">
-            <HintPath>$(SolutionDir)\GameBinaries\System.Net.Http.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\System.Net.Http.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Torch">
-            <HintPath>$(SolutionDir)\TorchBinaries\Torch.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\TorchBinaries\Torch.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Torch.API">
-            <HintPath>$(SolutionDir)\TorchBinaries\Torch.API.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\TorchBinaries\Torch.API.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Torch.Server">
-            <HintPath>$(SolutionDir)\TorchBinaries\Torch.Server.exe</HintPath>
+            <HintPath>$(SolutionDir)\..\TorchBinaries\Torch.Server.exe</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Ansel">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Ansel.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Ansel.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Audio">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Audio.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Audio.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Dedicated">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Dedicated.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Dedicated.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Game">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Game.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Game.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Game.XmlSerializers">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Game.XmlSerializers.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Game.XmlSerializers.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Input">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Input.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Input.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Library">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Library.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Library.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Math">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Math.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Math.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Math.XmlSerializers">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Math.XmlSerializers.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Math.XmlSerializers.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.NativeAftermath">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.NativeAftermath.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.NativeAftermath.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.NativeWrapper">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.NativeWrapper.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.NativeWrapper.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Network">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Network.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Network.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Platform.Windows">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Platform.Windows.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Platform.Windows.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.RemoteClient.Core">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.RemoteClient.Core.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.RemoteClient.Core.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Render">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Render.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Render.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Render11">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Render11.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Render11.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Scripting">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Scripting.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Scripting.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.Steam">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.Steam.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.Steam.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.UserInterface">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.UserInterface.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.UserInterface.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="VRage.XmlSerializers">
-            <HintPath>$(SolutionDir)\GameBinaries\VRage.XmlSerializers.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\VRage.XmlSerializers.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Sandbox.Common">
-            <HintPath>$(SolutionDir)\GameBinaries\Sandbox.Common.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\Sandbox.Common.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Sandbox.Game">
-            <HintPath>$(SolutionDir)\GameBinaries\Sandbox.Game.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\Sandbox.Game.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Sandbox.Game.XmlSerializers">
-            <HintPath>$(SolutionDir)\GameBinaries\Sandbox.Game.XmlSerializers.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\Sandbox.Game.XmlSerializers.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Sandbox.Graphics">
-            <HintPath>$(SolutionDir)\GameBinaries\Sandbox.Graphics.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\Sandbox.Graphics.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="Sandbox.RenderDirect">
-            <HintPath>$(SolutionDir)\GameBinaries\Sandbox.RenderDirect.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\Sandbox.RenderDirect.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="SpaceEngineers.Game">
-            <HintPath>$(SolutionDir)\GameBinaries\SpaceEngineers.Game.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\SpaceEngineers.Game.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="SpaceEngineers.ObjectBuilders">
-            <HintPath>$(SolutionDir)\GameBinaries\SpaceEngineers.ObjectBuilders.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\SpaceEngineers.ObjectBuilders.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="SpaceEngineers.ObjectBuilders.XmlSerializers">
-            <HintPath>$(SolutionDir)\GameBinaries\SpaceEngineers.ObjectBuilders.XmlSerializers.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\SpaceEngineers.ObjectBuilders.XmlSerializers.dll</HintPath>
             <Private>False</Private>
         </Reference>
         <Reference Include="HavokWrapper">
-            <HintPath>$(SolutionDir)\GameBinaries\HavokWrapper.dll</HintPath>
+            <HintPath>$(SolutionDir)\..\GameBinaries\HavokWrapper.dll</HintPath>
             <Private>False</Private>
         </Reference>
     </ItemGroup>
